--- a/src/main/resources/templates/writePost.html
+++ b/src/main/resources/templates/writePost.html
@@ -10,6 +10,9 @@
     Excerpt: <input type="text" th:field="*{excerpt}"/>
     Content: <input type="text" th:field="*{content}"/>
     Author: <input type="text" th:field="*{author}"/>
+<!--    <label for="tags">Tags (comma-separated):</label>-->
+    Tags: <input type="text"  name="tagString" />
+
     <input type="submit" value="Submit">
 
 </form>
