Tags functionality added

--- a/src/main/resources/templates/viewPost.html
+++ b/src/main/resources/templates/viewPost.html
@@ -14,7 +14,7 @@
 <div class="tag_container">
     Tags:
     <div class="tag_item" th:each="t : ${post.tags}" >
-        <p th:text="${t.name}" />
+        <p th:text="${t.name}" ></p>
     </div>
 </div>
 
