--- a/src/main/resources/templates/allPosts.html
+++ b/src/main/resources/templates/allPosts.html
@@ -11,7 +11,7 @@
 
         .item{
             border: 1px solid black;
-            height: 25vh;
+            height: auto;
         }
     </style>
     <title>Home</title>
@@ -21,7 +21,14 @@
     <div class="item" th:each="post : ${posts}" >
         <h5 th:text="${post.title}" ></h5>
         <p th:text="${post.excerpt}"></p>
+        <p th:text="${post.author}"></p>
         <p th:text="${post.createdAt}"></p>
+        <div class="tag_container">
+            Tags:
+            <div class="tag_item" th:each="t : ${post.tags}" >
+                <span style="display: inline;" th:text="${t.name}" ></span>
+            </div>
+        </div>
         <a th:href="@{/viewPost/{postId}(postId=${post.id})}"> View</a>
     </div>
 </div>
