--- a/src/main/resources/templates/newPost.html
+++ b/src/main/resources/templates/newPost.html
@@ -34,8 +34,17 @@
     <textarea id="content" th:field="*{content}" rows="6"></textarea>
     <span th:if="${#fields.hasErrors('content')}" th:errors="*{content}" class="error"></span><br>
 
+<!--    <span th:if = "${#authentication.principal.username == post.author ||-->
+<!--                #authorization.expression('hasRole(''ROLE_admin'')')}">-->
+
     <label for="author">Author</label><br>
-    <input type="text" id="author" th:field="*{author}"/>
+    <div th:if = "${#authorization.expression('hasRole(''ROLE_ADMIN'')')}">
+        <input type="text" id="author" th:field="*{author}"/>
+    </div>
+        <div th:unless="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}">
+            <span th:text = "${#authentication.principal.username}" ></span>
+            <input type="hidden"  th:field="*{author}"/>
+        </div>
     <span th:if="${#fields.hasErrors('author')}" th:errors="*{author}" class="error"></span><br>
 
     <label for="tags">Tags</label><br>
